--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">TestSDKApp</string>
     <string name="start_tokenization">Start tokenization</string>
+    <string name="card_tokenized">Card already tokenized</string>
+    <string name="default_text">""</string>
 </resources>
